# odometry-calibration

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindFlyCapture.cmake  FindGLEW.cmake  libhandler_AKAZE.cmake  libhandler_atlas.cmake  libhandler_bot2.cmake  libhandler_dc1394.cmake  libhandler_flycap.cmake  libhandler_glew.cmake  libhandler_glog.cmake  libhandler_glut.cmake  libhandler_gsl.cmake  libhandler_gtk.cmake  libhandler_java.cmake  libhandler_m.cmake  libhandler_python.cmake  libhandler_sba.cmake
config/: hauv.cfg  master.cfg  procman-hauv.cfg
lcmdefs/: PACKAGES.cmake  bot_core  bot_frames  bot_lcmgl  bot_param  bot_procman
lcmdefs/dehaze/: README.txt  dehaze_debug_t.lcm  dehaze_debug_t.lcm~  eurecar_ibeo_2202_t.lcm~
lcmdefs/hauv/: hauv_bs_cnv_t.lcm  hauv_bs_dvl_2_t.lcm  hauv_bs_dvl_t.lcm  hauv_bs_imu_t.lcm  hauv_bs_mbs_t.lcm  hauv_bs_nvg_t.lcm  hauv_bs_nvr_t.lcm  hauv_bs_pit_t.lcm  hauv_bs_raw_t.lcm  hauv_bs_rbs_t.lcm  hauv_bs_rcm_t.lcm  hauv_bs_rdp_t.lcm  hauv_bs_rnv_2_t.lcm  hauv_bs_rnv_t.lcm  hauv_didson_raw_t.lcm  hauv_didson_t.lcm  hauv_ms_cmd_t.lcm  hauv_pdn_cluster_vis_t.lcm  hauv_pdn_path_vis_t.lcm  hauv_pdn_reward_collection_t.lcm  hauv_pdn_reward_t.lcm  hauv_pdn_saliency_vis_t.lcm  hauv_pl_gbp_t.lcm  hauv_pl_ghp_t.lcm  hauv_pl_raw_t.lcm  hauv_pl_rbo_t.lcm  hauv_pl_res_t.lcm  hauv_pl_rns_t.lcm  hauv_pl_san_t.lcm  hauv_pl_spd_t.lcm  hauv_pl_ssd_t.lcm  hauv_pl_sus_t.lcm  hauv_rdi_bathy_t.lcm  hauv_vehicle_plan_t.lcm  hauv_vehicle_state_t.lcm  hauv_wp_delete_t.lcm  hauv_wp_goto_request_t.lcm  hauv_wp_goto_state_t.lcm  hauv_wp_goto_t.lcm  hauv_wp_list_t.lcm  (+2 more)
lcmdefs/irp_core/: irp_core_example_t.lcm  irp_core_heartbeat_t.lcm  irp_core_lpc_t.lcm  irp_core_point3d_list_t.lcm  irp_core_point3d_t.lcm  irp_core_pose3d_t.lcm  irp_core_rgb_t.lcm  structures.h
lcmdefs/irp_sen/: irp_sen_alt_t.lcm  irp_sen_autonix_t.lcm  irp_sen_color_float_t.lcm  irp_sen_cpc_t.lcm  irp_sen_dm_rph_t.lcm  irp_sen_dm_t.lcm  irp_sen_dvl2_t.lcm  irp_sen_dvl_t.lcm  irp_sen_fog_t.lcm  irp_sen_gps_raw_t.lcm  irp_sen_gps_t.lcm  irp_sen_gpsd_t.lcm  irp_sen_hg2_t.lcm  irp_sen_hg_t.lcm  irp_sen_is_raw_t.lcm  irp_sen_is_sync_t.lcm  irp_sen_lpc_t.lcm  irp_sen_ms_gx3_25_t.lcm  irp_sen_mti_t.lcm  irp_sen_pg_raw_t.lcm  irp_sen_pg_sync_t.lcm  irp_sen_rph_t.lcm  irp_sen_sick5xx_t.lcm  irp_sen_sick_t.lcm  irp_sen_status.lcm  irp_sen_vlp16_packet_t.lcm
lcmdefs/irp_slam/: irp_slam_hlink_t.lcm  irp_slam_isam_add_node_t.lcm  irp_slam_isam_cmd_t.lcm  irp_slam_isam_f_pose_partial_t.lcm  irp_slam_isam_f_pose_pose_partial_t.lcm  irp_slam_isam_f_pose_pose_t.lcm  irp_slam_isam_graph_vis_t.lcm  irp_slam_isam_init_t.lcm  irp_slam_isam_node_t.lcm  irp_slam_isam_properties_t.lcm  irp_slam_isam_request_cholmod_sparse_t.lcm  irp_slam_isam_request_state_t.lcm  irp_slam_isam_return_cholmod_sparse_t.lcm  irp_slam_isam_return_state_t.lcm
lcmdefs/irp_vis/: irp_vis_calib_t.lcm  irp_vis_cvsurf_params_t.lcm  irp_vis_debugplot_t.lcm  irp_vis_feature_attr_cvsurf_t.lcm  irp_vis_feature_attr_kaze_t.lcm  irp_vis_feature_attr_siftgpu_t.lcm  irp_vis_feature_collection_t.lcm  irp_vis_feature_t.lcm  irp_vis_feature_user_depth_t.lcm  irp_vis_siftgpu_params_t.lcm
matlab/data/: encoder.mat  gps_and_truth.mat
matlab/matlab/: apply_odometry_correction.m  calib_data.txt  compute_trajectory.m  fcn_calibration.m  fcn_drawPath.m  fcn_jacobian.m  genGroundtruth.m  runOdoCalib.m
matlab/matlab/matlab/: P1_rsmith_example.m  P2_wheel_odometry.m  encoder.mat  example_ekf.m  plot_mobile_robot.m  plot_triangle.m  sol_example_ekf.m  sol_rsmith_example.m  sol_wheel_odometry.m
matlab/matlab/tools/: head2tail_2d.m  inverse_2d.m  plot_ellipse.m  plot_pose_with_cov_ellipse.m  ssc_head2tail.m  ssc_inverse.m  ssc_tail2tail.m  tail2tail_2d.m  trans2vec.m  vec2trans.m
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/curve_fitting/: CMakeLists.txt  curve_fitting.cpp
src/examples/powell/: CMakeLists.txt  powell.cpp
src/examples/simple_ba/: CMakeLists.txt  simple_ba.cpp
src/odometry-calibrator/: CMakeLists.txt  MainWindow.cpp  odomproblem.cpp  odomproblem.h  resources.qrc  transform.cpp  transform.h
src/odometry-calibrator/resources/: vertexShader.vsh
